--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "dotenv": "^17.2.3",
     "groq-sdk": "^0.3.3",
     "jspdf": "^3.0.4",
-    "next": "14.0.4",
+    "next": "15.5.7",
     "openai": "^4.104.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "redis": "^5.10.0",
     "tiktoken": "^1.0.22",
     "zod": "^3.22.4"
   },
