--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@supabase/supabase-js": "^2.80.0",
     "@upstash/redis": "^1.35.8",
+    "@vercel/analytics": "^1.6.1",
     "dotenv": "^17.2.3",
     "groq-sdk": "^0.3.3",
     "jspdf": "^3.0.4",
