--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "next": "15.5.7",
+    "node-fetch": "^3.3.2",
     "openai": "^4.104.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
