--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-  "version": 2,
-  "env": {
-    "NODE_ENV": "production"
-  },
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
   "functions": {
-    "app/api/rag/query/route.js": {
-      "maxDuration": 30
+    "app/api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "regions": ["cpt1"],
+  "build": {
+    "env": {
+      "NEXT_TELEMETRY_DISABLED": "1"
     }
   }
 }
