--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "thandi-rag-system",
-  "version": "0.1.5",
+  "version": "0.1.6-fixed",
   "description": "Thandi AI Career Guidance Platform - RAG System",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
     "vercel-build": "next build",
     "start": "next start",
