--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,20 @@
 {
-  "framework": "nextjs",
-  "regions": ["cpt1"]
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
