--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thandi-rag-system",
-  "version": "0.1.8-react-fix",
+  "version": "0.1.9-flow-fix",
   "description": "Thandi AI Career Guidance Platform - RAG System",
   "scripts": {
     "dev": "next dev",
