--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ]
+  "buildCommand": "next build",
+  "installCommand": "npm ci",
+  "framework": "nextjs"
 }
