hotfix(admin): fix footer/header links and add admin authentication
- Fixed Header 'School Login' link to point to /school/claim (School Portal)
- Fixed Footer 'School Login' to 'School Portal' -> /school/claim
- Added Footer 'System Admin' link -> /admin
- Implemented admin authentication flow with JWT
- Created /admin/login page with email/password form
- Created admin auth API endpoints (login, verify, logout)
- Updated /admin page to check authentication before showing dashboard
- Updated /school/claim help section: removed phone, changed email to hello@thandi.online
- Added bcryptjs dependency for password hashing
- Created Supabase server helper
- Created DashboardOverview placeholder component

Fixes: School Portal vs Thandi Admin confusion
Tested: 7/7 automated tests passed (100%)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@upstash/redis": "^1.35.8",
     "@vercel/analytics": "^1.6.1",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "groq-sdk": "^0.3.3",
     "jsonwebtoken": "^9.0.3",
